chore: Disable all language support flags in languages.json

--- a/web/i18n/languages.json
+++ b/web/i18n/languages.json
@@ -12,77 +12,77 @@
       "name": "简体中文",
       "prompt_name": "Chinese Simplified",
       "example": "你好，Dify！",
-      "supported": true
+      "supported": false
     },
     {
       "value": "zh-Hant",
       "name": "繁體中文",
       "prompt_name": "Chinese Traditional",
       "example": "你好，Dify！",
-      "supported": true
+      "supported": false
     },
     {
       "value": "pt-BR",
       "name": "Português (Brasil)",
       "prompt_name": "Portuguese",
       "example": "Olá, Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "es-ES",
       "name": "Español (España)",
       "prompt_name": "Spanish",
       "example": "Saluton, Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "fr-FR",
       "name": "Français (France)",
       "prompt_name": "French",
       "example": "Bonjour, Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "de-DE",
       "name": "Deutsch (Deutschland)",
       "prompt_name": "German",
       "example": "Hallo, Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "ja-JP",
       "name": "日本語 (日本)",
       "prompt_name": "Japanese",
       "example": "こんにちは、Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "ko-KR",
       "name": "한국어 (대한민국)",
       "prompt_name": "Korean",
       "example": "안녕하세요, Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "ru-RU",
       "name": "Русский (Россия)",
       "prompt_name": "Russian",
       "example": " Привет, Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "it-IT",
       "name": "Italiano (Italia)",
       "prompt_name": "Italian",
       "example": "Ciao, Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "th-TH",
       "name": "ไทย (ประเทศไทย)",
       "prompt_name": "Thai",
       "example": "สวัสดี Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "id-ID",
@@ -96,7 +96,7 @@
       "name": "Українська (Україна)",
       "prompt_name": "Ukrainian",
       "example": "Привет, Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "vi-VN",
@@ -110,42 +110,42 @@
       "name": "Română (România)",
       "prompt_name": "Romanian",
       "example": "Salut, Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "pl-PL",
       "name": "Polski (Polish)",
       "prompt_name": "Polish",
       "example": "Cześć, Dify!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "hi-IN",
       "name": "Hindi (India)",
       "prompt_name": "Hindi",
       "example": "नमस्ते, Dify!",
-      "supported": "true"
+      "supported": false
     },
     {
       "value": "tr-TR",
       "name": "Türkçe",
       "prompt_name": "Türkçe",
       "example": "Selam!",
-      "supported": "true"
+      "supported": false
     },
     {
       "value": "fa-IR",
       "name": "Farsi (Iran)",
       "prompt_name": "Farsi",
       "example": "سلام, دیفای!",
-      "supported": true
+      "supported": false
     },
     {
       "value": "sl-SI",
       "name": "Slovensko (Slovenija)",
       "prompt_name": "Slovensko",
       "example": "Zdravo, Dify!",
-      "supported": true
+      "supported": false
     }
   ]
 }
